test/fail/variablerhnotdefined.app
//invalid right-hand side in assignment

application test

section functions

globals {
  function do() {
    var b : Int;
    b := a;
  }
}